comented passport for client login/register test

--- a/client/src/components/login-view/login-view.scss
+++ b/client/src/components/login-view/login-view.scss
@@ -27,3 +27,11 @@
   position: relative;
   margin-top: 30px;
 }
+
+// new user registration link
+.newUserLink {
+  position: relative;
+  top: 25px;
+  left: 15px;
+  // bottom: 10px;
+}
