--- a/client/src/components/main-view/main-view.scss
+++ b/client/src/components/main-view/main-view.scss
@@ -1,4 +1,9 @@
 .loggout {
-  margin-left: 810px;
   color: white;
+}
+
+@media only screen and (min-width: 900px) {
+  .loggout {
+    margin-left: 700px;
+  }
 }
